# sapling

./: .gitignore  CMakeLists.txt  IO.cpp  IO.h  README.md  Scanner.cpp  Scanner.h  Token.cpp  Token.h  main.cpp
ast/: CMakeLists.txt  Expression.cpp  Expression.h  Function.cpp  Function.h  IfBlock.cpp  IfBlock.h  Parameter.h  Program.cpp  Program.h
examples/: isPrime.sap  lazy.sap  math.sap  priorities.sap  simple.sap  sumOfRange.sap
grammar/: CMakeLists.txt  NonTerminal.h  Productions.cpp  Productions.h  Symbol.h  Token.cpp  Token.h
parser/: CMakeLists.txt  Function.cpp  IfBlock.cpp  Instruction.cpp  Parser.cpp  Parser.h  Program.cpp  ValueExpression.cpp
scanner/: AlphaToken.cpp  BraceToken.cpp  CMakeLists.txt  EqualsToken.cpp  IO.cpp  IO.h  OperatorToken.cpp  Predicates.cpp  Scanner.cpp  Scanner.h  ValueToken.cpp
tests/: ASTEvaluationTest.cpp  ASTFunctionTest.cpp  CMakeLists.txt  ExampleTest.cpp  IOTest.cpp  ParserSemanticTest.cpp  ParserSyntaxTest.cpp  ParserTest.cpp  ScannerTest.cpp  TokenTest.cpp
token/: CMakeLists.txt  Token.cpp  Token.h
